# iiVy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: event.h  log.h  main.c  utils.h
src/debug/: display_debug_title.c  display_physics_body.c
src/entities/: player.c  player.h
src/environment/: parallax.c  terrain.c
src/events/: client_draw_event.h  client_started_event.h  client_stopped_event.h  client_tick_event.h
src/features/: display_framerate.c  parallax.c  player.c  player.h
